--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
             <input type="text" class="form-control" name="username" placeholder="enter username" required>
             <input type="password" class="form-control" name="password" placeholder="enter password" required>
         </div>
-        <button type="submit" class="btn btn-primary">submit!</button>
+        <button type="submit" class="btn btn-primary" onclick="register();">submit!</button>
       </form>
       <br>
 
