--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
         <div class="form-group">
             <input type="text" class="form-control" name="name" placeholder="Enter name" required>
             <input type="text" class="form-control" name="username" placeholder="enter username" required>
-            <input type="password" class="form-control" name="password" placeholder="enter password" required>
+            <!--<input type="password" class="form-control" name="password" placeholder="enter password" required>-->
         </div>
         <button type="submit" class="btn btn-primary" onclick="register();">submit!</button>
       </form>
