--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,7 @@
             <input type="text" class="form-control" name="name" placeholder="Enter name" required>
             <input type="text" class="form-control" name="username" placeholder="enter username" required>
             <!--<input type="password" class="form-control" name="password" placeholder="enter password" required>-->
+            <output type="password" name="password" placeholder="{{ password }}" value="{{ password }}">
         </div>
         <button type="submit" class="btn btn-primary" onclick="register();">submit!</button>
       </form>
